Make sure delete button shows above NavBar on mobile

--- a/webapp/src/components/Recipe/Recipe.module.css
+++ b/webapp/src/components/Recipe/Recipe.module.css
@@ -24,7 +24,7 @@
     padding: 0 0.5em 0 0.5em;
     font-size: 0.75em;
     font-weight: bolder;
-    margin: 10em auto 0 auto;
+    margin: 10em auto 3em auto;
     border: none;
     cursor: pointer;
     border-radius: 10px;
